[package]
name = "kuzzo"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight Pinata.cloud client for Rust that compiles to WebAssembly"
license = "MIT"
repository = "https://github.com/yourusername/kuzzo"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers", "FormData", "File", "Blob"], optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"], optional = true }

[features]
default = ["native"]
native = ["reqwest"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys", "serde-wasm-bindgen"]
