[package]
name = "kuzzo"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight Pinata.cloud client for Rust that compiles to WebAssembly"
license = "MIT"
repository = "https://github.com/yourusername/kuzzo"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "basic"
crate-type = ["cdylib"]
required-features = ["wasm"]

[[example]]
name = "client"
crate-type = ["cdylib"]
required-features = ["wasm"]

[features]
default = []
wasm = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers", "FormData", "File", "Blob"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
