[package]
name = "kuzzo"
version = "0.1.0"
edition = "2021"
authors = ["kuzzmo <kuzzmo@kuzzmo.com>"]
description = "A lightweight Pinata.cloud client for Rust that compiles to WebAssembly"
license = "MIT"
repository = "https://github.com/kuzzmo/kuzzo"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "Headers", "FormData", "File", "Blob"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
futures = "0.3"
wasm-bindgen-test = "0.3"
